# DSC

./: .gitignore  EnumTable.xlsx  README.md
Client/: CMakeLists.txt  README.md
Client/inc/: can.h  client.h  define.h  encoder.h  mcp2515.h  mcp2515_defs.h  mcp2515_queue.h  motor.h  sensor.h
Client/pio/: pio_rotary_encoder.pio  quadrature.pio
Client/src/: can.cpp  client.cpp  encoder.cpp  i2c-display-lib.c  main.cpp  mcp2515.c  motor.cpp  sensor.cpp
GUI/: Step.py  crc.py  gui.py  guiclass.py  mycsv.csv  ngui.py  teststep.py
Server/: CMakeLists.txt  README.md
Server/inc/: MotorClient.h  VirtualMotor.h  can.h  canserver.h  clientmotor.h  define.h  i2c-display-lib.h  mcp2515.h  mcp2515_defs.h  sensor.h
Server/src/: DataMotor.c  MotorClient.cpp  VirtualMotor.cpp  can.cpp  canserver.cpp  clientmotor.cpp  main.cpp  mcp2515.c  sensor.cpp
